traces/bug_891.txt
src/fflib/lgfem.cpp:4100: error: DEAD_STORE
  The value written to &keepPV (type _Bool) is never used.
Showing all 1 steps of the trace


src/fflib/lgfem.cpp:4100:18: Write of unused value
4098.     bool addtoplot=false, keepPV=false;
4099.     if (nargs[18]) addtoplot= GetAny<bool>((*nargs[18])(s));
4100.     if (nargs[19]) keepPV= GetAny<bool>((*nargs[19])(s));
                         ^
4101.     if (nargs[VTK_START+8]) ArrowSize = GetAny<double>((*nargs[VTK_START+8])(s));
4102.     //  for the gestion of the PTR. 
